# SmartRelay

./: .gitignore  README.md  resource.example.md  resource.md  协议标准.md  项目需求文档.md
admin-web/: .env.example  .env.production  README.md  index.html  package-lock.json  package.json  vite.config.ts
admin-web/src/: main.ts  style.css
backend/: .env.example  .gitignore  README.md  requirements.txt
backend/app/: __init__.py  command_service.py  config.py  db.py  db_migrations.py  deps.py  errors.py  main.py  models.py  (+14 more)
database/: apply.py  init.sql  migration_add_relay_on.sql  seed_admin.py
deploy/: iot.welinklab.com.conf  nginx-smart-relay.conf  server-bootstrap.sh
firmware/: .gitignore  CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig.defaults  secrets.ini.example
firmware/main/: CMakeLists.txt  app_main.cpp  sr_app.cpp  sr_app.h  sr_ble.c  sr_ble.h  sr_led.cpp  sr_led.h  sr_mqtt.cpp  sr_mqtt.h  sr_nvs.cpp  sr_nvs.h  sr_ota.cpp  sr_ota.h  sr_relay.cpp  sr_relay.h  sr_schedule.cpp  sr_schedule.h  sr_sntp.cpp  sr_sntp.h  sr_wifi.cpp  sr_wifi.h
firmware/main/include/: sr_config.h
miniprogram/: README.md  app.js  app.json  app.wxss  project.config.json  project.private.config.json  sitemap.json
小程序原型/: bind.html  device-detail.html  device-rename.html  devices.html  firmware.html  index.html  login.html  logs.html  mine.html  notifications.html  provision.html  schedules.html  shares.html  timer-form.html
管理后台原型/: account-password.html  dashboard.html  device-logs.html  devices.html  firmware-ota.html  index.html  login.html  users.html
(+105 files in other folders)
